php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #73794 Crash (out of memory) when using run and # command separator
Submitted: 2016-12-20 13:37 UTC Modified: 2016-12-20 19:15 UTC
From: kaplan@php.net Assigned: bwoebi (profile)
Status: Closed Package: phpdbg
PHP Version: 7.1.0 OS: Linux
Private report: No CVE-ID: None
 [2016-12-20 13:37 UTC] kaplan@php.net
Description:
------------
phpgdb from PHP 7.1.0 produces an error, while it works fine on PHP 7.0.11.

Test script:
---------------
#!/bin/bash
/usr/local/zend/bin/phpdbg /var/www/html/simpleEcho.php -a <<< "r simpleEcho.php # quit"

where /var/www/html/simpleEcho.php is simply:
<?php
echo "phpdbg script run fine";
?>

Expected result:
----------------
phpdbg script run fine

Actual result:
--------------
[Welcome to phpdbg, the interactive PHP debugger, v0.5.0]
To get help using phpdbg type "help" and press enter
[Please report bugs to <http://bugs.php.net/report.php>]
[Successful compilation of /var/www/html/simpleEcho.php]
prompt> 
mmap() failed: [22] Invalid argument
[PHP Fatal error:  Out of memory (allocated 2097152) (tried to allocate 18446744073709551615 bytes) in Unknown on line 0]
[Could not find information about included file...]

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2016-12-20 19:10 UTC] bwoebi@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: bwoebi
 [2016-12-20 19:10 UTC] bwoebi@php.net
Simple :-P It really is just the combination of run + using of # command separator. Fixing soon.
 [2016-12-20 19:15 UTC] bwoebi@php.net
-Summary: Crash (out of memory) on a simple test +Summary: Crash (out of memory) on when using run and # command separator
 [2016-12-20 19:15 UTC] bwoebi@php.net
-Summary: Crash (out of memory) on when using run and # command separator +Summary: Crash (out of memory) when using run and # command separator
 [2016-12-20 19:18 UTC] bwoebi@php.net
Automatic comment on behalf of bobwei9@hotmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=8b06b7e2665e16d1643f7027072dfd3ec34fa0e2
Log: Fixed bug #73794 (Crash (out of memory) when using run and # command separator)
 [2016-12-20 19:18 UTC] bwoebi@php.net
-Status: Assigned +Status: Closed
 [2016-12-20 19:18 UTC] bwoebi@php.net
Automatic comment on behalf of bobwei9@hotmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=8b06b7e2665e16d1643f7027072dfd3ec34fa0e2
Log: Fixed bug #73794 (Crash (out of memory) when using run and # command separator)
 [2017-01-24 12:05 UTC] kaplan@php.net
@bwoebi Can this also be taken to the 7.0 branch? Looks like 7.0.13 and above suffer from the same problem.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 12:00:01 2026 UTC