Fixed bug #73794 (Crash (out of memory) when using run and # command separator)